Update code with UI

--- a/index.html
+++ b/index.html
@@ -6,5 +6,20 @@
 <body>
     <title>Tic-Tac-Toe Game</title>
     <h1>Play Tic-Tac-Toe</h1>
+
+    <div class = "content">
+        <div class = "buttons">
+            <button onclick = "buttonClick(`ROCK`)" id = "rock">Rock</button>
+            <button onclick = "buttonClick(`PAPER`)" id = "paper">Paper</button>
+            <button onclick = "buttonClick(`SCISSORS`)" id = "scissors">Scissors</button>
+        </div>
+        
+        <div class = "textContent">
+        <div id = "results"></div>
+        <div id = "score"></div>
+        <div id = "gameResults"></div>
+        </div>
+    </div>
+
     <script src = "script.js"></script>
 </body>
